--- a/src/index.html
+++ b/src/index.html
@@ -851,6 +851,13 @@
                   <p>Код товара:<span>lpju-00100</span></p>
                  </li>
               </ul>
+              <div class="star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
               <div class="products-section-buy">
                 <div class="content3-block-buy-cost">
                   <p>99350.00<span>&#8372;</span></p>
@@ -899,38 +906,41 @@
                   <p class="content1-description-title">Характеристики</p>
                 </div>
               </div>
-              <ul>
-                <li class="iii1 iii">
-                  <p class="text">тип</p>
-                </li>
-                <li class="iii2 iii">
-                  <p class="text">ротационный скоростной увеличенный длинная ножка</p>
-                </li>
-              </ul>
-              <ul>
-                <li class="iii1 iii">
-                  <p class="text">производитель</p>
-                </li>
-                <li class="iii2 iii">
-                  <p class="text">тайвань</p>
-                </li>
-              </ul>
-              <ul>
-                <li class="iii1 iii">
-                  <p class="text">положение</p>
-                </li>
-                <li class="iii2 iii">
-                  <p class="text">вертикальный</p>
-                </li>
-              </ul>
-              <ul>
-                <li class="iii1 iii">
-                  <p class="text">код</p>
-                </li>
-                <li class="iii2 iii">
-                  <p class="text">hsh-12-15mm(tr2) nbl</p>
-                </li>
-              </ul>
+              <div class="ul-wrapper">
+                <ul>
+                  <li class="iii1 iii">
+                    <p class="text">тип</p>
+                  </li>
+                  <li class="iii2 iii">
+                    <p class="text">ротационный скоростной увеличенный длинная ножка</p>
+                  </li>
+                </ul>
+                <ul>
+                  <li class="iii1 iii">
+                    <p class="text">производитель</p>
+                  </li>
+                  <li class="iii2 iii">
+                    <p class="text">тайвань</p>
+                  </li>
+                </ul>
+                <ul>
+                  <li class="iii1 iii">
+                    <p class="text">положение</p>
+                  </li>
+                  <li class="iii2 iii">
+                    <p class="text">вертикальный</p>
+                  </li>
+                </ul>
+                <ul>
+                  <li class="iii1 iii">
+                    <p class="text">код</p>
+                  </li>
+                  <li class="iii2 iii">
+                    <p class="text">hsh-12-15mm(tr2) nbl</p>
+                  </li>
+                </ul>
+              </div>
+              
             </div>
           </div>
           <div class="ppp3">
@@ -941,38 +951,42 @@
                   <p class="content1-description-title">Применение</p>
                 </div>
               </div>
-              <ul>
-                <li class="iii1 iii">
-                  <p class="text">Juki</p>
-                </li>
-                <li class="iii2 iii">
-                  <p class="text">ddddddddddddd ffffffffff hhhhhhhhhhh dddddddddddd</p>
-                </li>
-              </ul>
-              <ul>
-                <li class="iii1 iii">
-                  <p class="text">Brother</p>
-                </li>
-                <li class="iii2 iii">
-                  <p class="text">bbbbbbbbbb kkkkkkkkkk llllllllllll ssssssssssss wwwwwwwwwww hhhhhhhh</p>
-                </li>
-              </ul>
-              <ul>
-                <li class="iii1 iii">
-                  <p class="text">Pfaff</p>
-                </li>
-                <li class="iii2 iii">
-                  <p class="text">zzzzzzzzzzz aaaaaaaaaaaa qqqqqqqqqqqq uuuuuuuuuu llllllllll jjjjjjjjjjjjj</p>
-                </li>
-              </ul>
-              <ul>
-                <li class="iii1 iii">
-                  <p class="text">Siruba</p>
-                </li>
-                <li class="iii2 iii">
-                  <p class="text">ggggggggggg dddddddddd uuuuuuuuu</p>
-                </li>
-              </ul>
+              <div class="ul-wrapper">
+                <ul>
+                  <li class="iii1 iii">
+                    <p class="text">Juki</p>
+                  </li>
+                  <li class="iii2 iii">
+                    <p class="text">ddddddddddddd ffffffffff hhhhhhhhhhh dddddddddddd</p>
+                  </li>
+                </ul>
+                <ul>
+                  <li class="iii1 iii">
+                    <p class="text">Brother Brother</p>
+                  </li>
+                  <li class="iii2 iii">
+                    <p class="text">ddl-8700frt-h</p>
+                  </li>
+                </ul>
+                <ul>
+                  <li class="iii1 iii">
+                    <p class="text">Pfaff</p>
+                  </li>
+                  <li class="iii2 iii">
+                    <p class="text">zzzzzzzzzzz aaaaaaaaaaaa qqqqqqqqqqqq uuuuuuuuuu llllllllll jjjjjjjjjjjjj</p>
+                  </li>
+                </ul>
+                <ul>
+                  <li class="iii1 iii">
+                    <p class="text">Siruba</p>
+                  </li>
+                  <li class="iii2 iii">
+                    <p class="text">ggggggggggg dddddddddd uuuuuuuuu</p>
+                  </li>
+                </ul>
+
+              </div>
+              
             </div>
           </div>
         </div>
