--- a/src/index.html
+++ b/src/index.html
@@ -58,10 +58,10 @@
           <a href="#">
             <div class="block-logo">
               <!-- <img class="photo-logo" src="images/49240.png" alt=""> -->
-              <!-- <img class="photo-logo" src="images/uuu-1000a.png" alt="">
-              <div class="block-logo-text">
-                <p class="logo-text">Sewing Industrial Machines Accessories</p> -->
-              <!-- </div> -->
+              <!-- <img class="photo-logo" src="images/uuu-1000a.png" alt="">  -->
+              <!-- <div class="block-logo-text">
+                <p class="logo-text">Sewing Industrial Machines Accessories</p>
+              </div> -->
             </div> 
           </a>
           
