--- a/src/index.html
+++ b/src/index.html
@@ -59,9 +59,9 @@
             <div class="block-logo">
               <!-- <img class="photo-logo" src="images/49240.png" alt=""> -->
               <!-- <img class="photo-logo" src="images/uuu-1000a.png" alt="">  -->
-              <!-- <div class="block-logo-text">
+              <div class="block-logo-text">
                 <p class="logo-text">Sewing Industrial Machines Accessories</p>
-              </div> -->
+              </div>
             </div> 
           </a>
           
@@ -1112,7 +1112,8 @@
         <div class="helpful-section-menu">
           <a href="">
             <div class="menu-block-img">
-              <img class="helpful-menu-img" src="images/order_3.png" alt=""> 
+              <!-- <img class="helpful-menu-img" src="images/order_3.png" alt="">  -->
+              <img class="helpful-menu-img" src="images/88-w-88.png" alt=""> 
             </div> 
             <div class="menu-block-text">
               <p class="helpful-menu-text">Под заказ</p>
