--- a/src/index_page_parts_list_pdf.html
+++ b/src/index_page_parts_list_pdf.html
@@ -56,11 +56,9 @@
         <div id="logo">
           <a href="#">
             <div class="block-logo">
-              <!-- <img class="photo-logo" src="images/49240.png" alt=""> -->
-              <!-- <img class="photo-logo" src="images/uuu-1000a.png" alt="">
               <div class="block-logo-text">
                 <p class="logo-text">Sewing Industrial Machines Accessories</p>
-              </div> -->
+              </div>
             </div>
           </a>
         </div>
@@ -83,7 +81,6 @@
             <ul>
               <li class="li-one">
                 <input type="checkbox" name="toggle" class="toggleSubmenu" id="submit-m1">
-                <!-- <a href="#"><i class="fas fa-th-list"></i>Запасти &#11167;</a> -->
                 <a href="#" class="li-one_a"><i class="fas fa-th-list"></i>Запчасти</a>
                 <label for="submit-m1" class="toggleSubmenu"><i class="fa"></i></label>
                 <ul class="level-li-one">
@@ -1291,11 +1288,11 @@
         <div class="address">
           <a href="#">
             <i class="fas fa-map-marker-alt fa-lg"></i>
-            UKRAINE
+            Ukraine
           </a>
           <a href="tel:+38095-3989891">
             <i class="fas fa-phone-square-alt fa-lg"></i>
-            +38 - 095 - 3989891
+            +380953989891
           </a>
           <a href="mailto:sima99sewing@gmail.com">
             <i class="fas fa-envelope fa-lg"></i>
@@ -1306,9 +1303,9 @@
       <div class="box">
         <h4>Контакт</h4>
         <form>
-          <label for="mail">Email <span>&#10034;</span></label>
+          <label for="mail">Введите свой email<span>&#10034;</span></label>
           <input type="email" name="mail" id="mail" required>
-          <label for="mess">Message <span>&#10034;</span></label>
+          <label for="mess">Напишите сообщение<span>&#10034;</span></label>
           <textarea name="mess" id="mess" rows="3" required></textarea>
           <button type="submit">Отправить</button>
         </form>
