--- a/src/index.html
+++ b/src/index.html
@@ -278,7 +278,7 @@
 
                     <li>
                       <input type="checkbox" name="toggle" class="toggleSubmenu" id="submit-m1-9">
-                      <a href="#">Челноки</a>
+                      <a href="#">Челноки промышленные</a>
                       <label for="submit-m1-9" class="toggleSubmenu"><i class="fa"></i></label>
                       <ul>
                         <li><a href="#">Челноки зигзаг</a></li>
